--- a/css/style.css
+++ b/css/style.css
@@ -61,64 +61,99 @@ h1 {
     color: darkgreen;
 }
 
-.product-container{
-    padding: 0 10vw;
-    display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
+.card {
+    width: 33%;
+    display: inline-block;
+    text-align: center;
 }
 
-.product-container::-webkit-scrollbar{
-    display: none;
+.container {
+    padding: 2px 16px;
 }
 
-.product-card{
-    flex: 0 0 auto;
-    width: 250px;
-    height: 450px;
-    margin-right: 40px;
+.pc-images {
+    width: 180px;
+    height: 200px;
+    align-content: center;
 }
 
-.product-image{
-    position: relative;
-    width: 100%;
-    height: 350px;
-    overflow: hidden;
+h4 {
+    font-family: Verdana, sans-serif;
+    color: navy;
 }
 
-.product-thumb{
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
+div h4 {
+    text-align: center;
+    font-family: Verdana, sans-serif;
+    color: navy;
 }
 
-.product-info{
-    width: 100%;
-    height: 100px;
-    padding-top: 10px;
+div p {
+    text-align: justify;
+    font-family: Verdana, sans-serif;
+    color: darkslateblue;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
-.product-brand{
-    text-transform: uppercase;
+div li {
+    font-family: Verdana, sans-serif;
+    color: darkslateblue;
+    margin-right: 100px;
 }
 
-.product-short-des{
-    width: 100%;
-    height: 20px;
-    line-height: 20px;
-    overflow: hidden;
-    opacity: 0.5;
-    text-transform: capitalize;
-    margin: 5px 0;
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    margin-bottom: 50px;
+    border-radius: 8px;
 }
 
-.price{
-    font-weight: 900;
-    font-size: 20px;
+.hov {
+    background-color: white;
+    color: black;
+    border: 2px solid darkslateblue;
 }
 
-.actual-price{
-    margin-left: 20px;
-    opacity: 0.5;
-    text-decoration: line-through;
+.hov:hover {
+    background-color: darkslateblue;
+    color: white;
+}
+
+.product-text {
+    text-align: justify;
+    margin-right: 70%;
+    margin-left: 2%;
+    font-family: Verdana, sans-serif;
+    color: black;
+}
+
+.product-list {
+    font-family: Verdana, sans-serif;
+    color: black;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
 }
