--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
 footer {
     margin-top: 40px;
+    bottom: 0;
 }
 
 .botnav {
@@ -59,6 +60,7 @@ footer {
 h1 {
     font-family: Verdana, sans-serif;
     color: darkgreen;
+    margin-left: 2%;
 }
 
 .card {
@@ -132,6 +134,14 @@ div li {
 .product-text {
     text-align: justify;
     margin-right: 70%;
+    margin-left: 2%;
+    font-family: Verdana, sans-serif;
+    color: black;
+}
+
+.basket-text {
+    text-align: justify;
+    margin-right: 10%;
     margin-left: 2%;
     font-family: Verdana, sans-serif;
     color: black;
