--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,19 @@ a:active {
     font-family: Verdana, sans-serif;
     color: navy;
 }
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    font-family: Verdana, sans-serif;
+}
+
+form {
+    font-family: Verdana, sans-serif;
+}
